tests/vendor/valid/simple/prefix_in_ternary.c
//expect 2
//tags: simple, conditional
int main() {
    int a = 0;
    return (++a ? ++a : 0);
}